# 40Hz-flicker-phase

./: Dockerfile  README.md  docker-compose.yml  general_analysis.ipynb  general_analysis_strong_445.ipynb  helper_functions.py  settings.yaml
lib/pycircstat2-main/: pyproject.toml
lib/pycircstat2-main/.github/workflows/: deploy.yml  python-package.yml
lib/pycircstat2-main/docs/docs/: feature-checklist.md
lib/pycircstat2-main/examples/: B1-Fisher-1993.ipynb  B2-Zar-2010.ipynb  B3-Pewsey-2014.ipynb  T0-utils.ipynb  T1-descriptive-statistics.ipynb  T2-hypothesis-testing.ipynb  T3-circular-distributions.ipynb  T4-regression.ipynb
lib/pycircstat2-main/pycircstat2/: clustering.py  descriptive.py  distributions.py  hypothesis.py  regression.py  utils.py
lib/pycircstat2-main/pycircstat2/data/pewsey/: lung_deaths.csv  lung_deaths.csv-metadata.json
lib/pycircstat2-main/tests/: test_descriptive.py  test_hypothesis.py  test_regression.py
src/: inspect_amplitude_masks.ipynb  inspect_atlas.ipynb  inspect_epoch_allignment.ipynb  inspect_frequencies.ipynb  inspect_hilbert.ipynb  inspect_hilbert_referenced.ipynb  inspect_hilbert_referenced_multiple.ipynb  inspect_raw_filtered_for_artifacts.ipynb  inspect_raw_filtered_retina.ipynb  inspect_raw_for_dead_channels.ipynb  inspect_retina_reference.ipynb  inspect_stcs.ipynb  inspect_z_val_stcs.ipynb  make_altas_p_values.ipynb  make_altas_p_values_sanity_check.ipynb  make_altas_p_values_sigs_way.ipynb  make_altas_p_values_sigs_way_plv.ipynb  make_amplitude_masks.ipynb  make_epochs.ipynb  make_hilbert.ipynb  make_hilbert_video.ipynb  (+22 more)
(+22 files in other folders)
