[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycircstat2"
version = "0.1.16"
description = "Circular statistcs with Python."
authors = [
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "hea>=0.1.2",
]
readme = {file = "README.md", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-material-extensions",
    "mkdocstrings[python]",
    "watermark",
    "polars",
    "ipykernel>=6.31.0",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true
